--- a/public/CSS/patient.css
+++ b/public/CSS/patient.css
@@ -15,12 +15,12 @@ body{
 
 h1 {
     color: var(--buff);
-    text-shadow: 2px 2px 4px #FFFFFF;
+    text-shadow: 2px 2px 4px white;
 }
 
 h2 {
     color: var(--tea-green);
-    text-shadow: 2px 2px 4px var(--beige);
+    text-shadow: 2px 2px 4px black;
     text-align: center;
 }
 
@@ -46,8 +46,10 @@ button {
 
 table {
     width: 100%;
-    border-collapse: collapse;
-    border: #000000;
+    border-collapse: separate;
+    border-spacing: 0; 
+    border-radius: 10px;
+    overflow: hidden;
     margin: 20px 0;
     text-align: center;
 }
