--- a/public/CSS/patient.css
+++ b/public/CSS/patient.css
@@ -20,7 +20,7 @@ h1 {
 
 h2 {
     color: var(--tea-green);
-    text-shadow: 2px 2px 4px black;
+    text-shadow: 2px 2px 4px var(--beige);
     text-align: center;
 }
 
@@ -39,18 +39,18 @@ button {
     font-weight: 600;
     border: none;
     border-radius: 5px;
+    margin: 20px;
     padding: 15px 25px;
     cursor: pointer;
-    margin: auto 0;
 }
 
 table {
     width: 100%;
+    max-width: 100%;
     border-collapse: separate;
     border-spacing: 0; 
     border-radius: 10px;
     overflow: hidden;
-    margin: 20px 0;
     text-align: center;
 }
 
@@ -64,4 +64,13 @@ table, th, td {
 
 #leave-queue {
     text-align: center;
+}
+
+#patient-info, #waiting-list {
+    max-width: 75%;
+    margin: 0 auto;
+}
+
+#waiting-list, #leave-btn {
+    margin-top: 50px;
 }
